# Phase3_

./: .gitignore  CLAUDE.md  DATABASE_SETUP.md  DEPLOYMENT.md  check_database_tasks.py  check_user_tasks.py  check_users.py  create_test_task_for_user.py  create_test_user.py  init_db.py  main.py  pyproject.toml  test_ai_agent_direct.py  test_chat.py  test_chat_fixed.py  test_db.py  test_endpoints.py  test_list_tasks_direct.py  test_new_registration.py  test_registration.py  test_task_creation.py  test_users.py
.claude/agents/: auth-security-agent.md  chatkit-ui-generator.md  fastapi-backend-agent.md  neon-postgres-ops.md  todo-chatbot-agent.md
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  application.py  main.py  pyproject.toml  requirements.txt  settings.py  simple_test.py  test_ai_agent.py  test_auth_debug.py  test_basic.py  test_implementation.py  test_implementation_fixed.py  test_user_registration.py  todo_app.db  validate_quickstart.py
backend/alembic/: env.py
backend/docs/: api_reference.md
backend/src/: config.py
backend/src/api/: __init__.py  auth_endpoint.py  chat_endpoint.py  task_endpoint.py
backend/src/api/v1/: chat.py  test_chat_auth.py  test_chat_success.py
backend/src/auth/: better_auth_backend.py  config.py  middleware.py  schemas.py
backend/src/database/: __init__.py  async_session.py  connection_pool.py  crud.py  init.py  migrate.py  models.py  neon_migration.py  session.py  transaction_manager.py
backend/src/models/: __init__.py  conversation.py  message.py  task.py
backend/src/services/: __init__.py  ai_agent.py  conversation_service.py  mcp_client.py  mcp_server.py  message_service.py  task_service.py
backend/src/templates/: response_templates.py
backend/src/tools/: __init__.py  add_task.py  complete_task.py  delete_task.py  error_handlers.py  list_tasks.py  update_task.py
backend/src/utils/: error_handlers.py  exceptions.py  helpers.py  logging.py  logging_config.py  rate_limiter.py
backend/tests/contract/: test_chat_api.py  test_error_handling.py
backend/tests/integration/: test_add_task.py  test_complete_task.py  test_concurrency.py  test_error_scenarios.py  test_list_tasks.py  test_persistence.py
backend/tests/unit/: test_task_service.py
backend/tests/validation/: test_mcp_consistency.py  test_security_check.py
frontend/: Dockerfile  IMPLEMENTATION_PLAN.md  README.md  middleware.ts  package-lock.json  package.json  verify_implementation.py
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/constants/: index.ts
todo-chatbots/: Chart.yaml  values.yaml
(+87 files in other folders)
