    [tool.poetry]
    name = "ai-todo-chatbot-backend"
    version = "0.1.0"
    description = "AI-powered todo chatbot backend with FastAPI and MCP server"
    authors = ["Your Name <your.email@example.com>"]

    [tool.poetry.dependencies]
    python = "^3.9"
    fastapi = "^0.104.1"
    uvicorn = {extras = ["standard"], version = "^0.24.0"}
    sqlmodel = "^0.0.16"
    asyncpg = "^0.0.16"
    better-fastapi = "^0.2.0"
    pydantic = "^2.5.0"
    pydantic-settings = "^2.1.0"
    python-jose = {extras = ["cryptography"], version = "^3.3.0"}
    passlib = {extras = ["bcrypt"], version = "^1.7.4"}
    python-multipart = "^0.0.6"
    alembic = "^1.13.1"
    sqlalchemy = "^2.0.23"
    openai = "^1.3.5"
    sse-starlette = "^1.6.5"
    httpx = "^0.25.2"
    python-dotenv = "^1.0.0"

    [tool.poetry.group.dev.dependencies]
    pytest = "^7.4.3"
    pytest-asyncio = "^0.21.1"
    black = "^23.11.0"
    flake8 = "^6.1.0"
    mypy = "^1.7.1"
    isort = "^5.12.0"

    [build-system]
    requires = ["poetry-core"]
    build-backend = "poetry.core.masonry.api"

    [tool.pytest.ini_options]
    testpaths = ["tests"]
    asyncio_mode = "auto"
