[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-ai-agent"
version = "0.1.0"
description = "AI-Powered Conversational Todo Agent"
authors = [{name = "Developer", email = "developer@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "openai>=1.0.0",
    "sqlmodel>=0.0.8",
    "asyncpg>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mcp>=1.0.0",
    "python-multipart>=0.0.6",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "alembic>=1.11.0",
    "psycopg2-binary>=2.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
    "pre-commit>=3.0.0",
    "tox>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']
skip-string-normalization = true

[tool.ruff]
select = ["E", "W", "F", "I", "C", "B", "UP", "RUF"]
line-length = 88
target-version = "py39"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true